hphp/test/zend/good/ext/posix/tests/posix_kill_variation1.php.expectf
*** Testing posix_kill() : usage variations ***

Notice: Undefined variable: undefined_var in %s/posix_kill_variation1.php on line 53

Notice: Undefined variable: unset_var in %s/posix_kill_variation1.php on line 56

Arg value 10.5 
bool(false)

Arg value -10.5 
bool(false)

Arg value 101234567000 
bool(false)

Arg value 1.07654321E-9 
bool(false)

Arg value 0.5 
bool(false)

Notice: Array to string conversion in %s/posix_kill_variation1.php on line 65

Arg value Array 

Warning: posix_kill() expects parameter 1 to be integer, array given in %s/posix_kill_variation1.php on line 66

Notice: Array to string conversion in %s/posix_kill_variation1.php on line 65

Arg value Array 

Warning: posix_kill() expects parameter 1 to be integer, array given in %s/posix_kill_variation1.php on line 66

Notice: Array to string conversion in %s/posix_kill_variation1.php on line 65

Arg value Array 

Warning: posix_kill() expects parameter 1 to be integer, array given in %s/posix_kill_variation1.php on line 66

Notice: Array to string conversion in %s/posix_kill_variation1.php on line 65

Arg value Array 

Warning: posix_kill() expects parameter 1 to be integer, array given in %s/posix_kill_variation1.php on line 66

Notice: Array to string conversion in %s/posix_kill_variation1.php on line 65

Arg value Array 

Warning: posix_kill() expects parameter 1 to be integer, array given in %s/posix_kill_variation1.php on line 66

Arg value  
bool(false)

Arg value  
bool(false)

Arg value 1 
bool(false)

Arg value  
bool(false)

Arg value 1 
bool(false)

Arg value  
bool(false)

Arg value  

Warning: posix_kill() expects parameter 1 to be integer, string given in %s/posix_kill_variation1.php on line 66

Arg value  

Warning: posix_kill() expects parameter 1 to be integer, string given in %s/posix_kill_variation1.php on line 66

Arg value string 

Warning: posix_kill() expects parameter 1 to be integer, string given in %s/posix_kill_variation1.php on line 66

Arg value string 

Warning: posix_kill() expects parameter 1 to be integer, string given in %s/posix_kill_variation1.php on line 66

Arg value  
bool(false)

Arg value  
bool(false)

Catchable fatal error: Object of class stdClass could not be converted to string in %s/posix_kill_variation1.php on line 65
